project-styles.css
* {
  /* outline: 1px solid red !important; */
}

:root {
  /** colors **/
  /* primary */
  --primary-100: #ffdacc;
  --primary-200: #ffb599;
  --primary-300: #ff8f66;
  --primary-400: #ff6a33;
  --primary-500: #ff4500;
  --primary-600: #cc3700;
  --primary-700: #992900;
  --primary-800: #661c00;
  --primary-900: #330e00;
  /* grey */
  --grey-50: #f8fafc;
  --grey-900: #0f172a;
  /* var */
  --backgroundColor: var(--grey-50);
  --textColor: var(--grey-900);
  /** Dimensions **/
  --max-width: 1120px;
  --fixed-width: 600px;
  --view-width: 90vw;
  --borderRadius: 0.25rem; /* 4px */
}

.nav {
  width: var(--view-width);
  max-width: var(--max-width);
  margin: 0 auto;
  padding: 1.5rem 2rem;
}

.logo {
  font-weight: 700;
  font-size: 3rem;
  color: var(--primary-500);
}

.page {
  width: var(--view-width);
  max-width: var(--max-width);
  margin: 0 auto;
  padding: 1.5rem 2rem 5rem;
}

.breadcrumbs {
  margin-bottom: 1.5rem;
}

.menu-item-link,
.breadcrumb-link {
  color: blue;
}
.menu-item-link:hover,
.breadcrumb-link:hover {
  color: var(--primary-500);
}

img {
  width: 500px;
  /* margin: 0 auto; */
  border-radius: var(--borderRadius);
}

h1 {
  /* width: fit-content; */
  margin-bottom: 0.75rem;
}

h2,
img {
  margin-top: 1.5rem;
}

/* img {
  margin-left: auto;
  margin-right: auto;
} */

/* title */

.title {
  /* text-align: center; */
  /*  */
  width: fit-content;
  /* margin: 0 auto; */
}

.title-underline {
  background-color: var(--primary-500);
  width: 7rem;
  height: 0.25rem;
  margin: 0 auto;
  margin-top: -1rem;
  /*  */
  margin-bottom: 1.5rem;
}

